[package]
name = "taskgarden"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.10"
once_cell = "1.19"
inquire = "0.7"
colored = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
crossterm = "0.27"
